--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 Werkzeug==2.0.2
-numpy>=1.21.4
-scipy>=1.7.2
-scikit-learn>=1.7.2
-matplotlib>=3.5.0
-pandas>=1.3.4
+numpy==1.21.4
+scipy==1.7.2
+scikit-learn==1.7.2
+matplotlib==3.5.0
+pandas==1.3.4
 # Flask==1.1.1
 # gunicorn==19.9.0
 # itsdangerous==1.1.0
